Update with new v4 paths

--- a/_posts/2023-08-11-Webdev.md
+++ b/_posts/2023-08-11-Webdev.md
@@ -15,7 +15,7 @@ LazyVim based config for web developers. JavaScript, Typescript, React, and Tail
 - Configuration category: [Language](https://lazyman.dev/configurations/#language-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io){:target="_blank"}{:rel="noopener noreferrer"}
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim){:target="_blank"}{:rel="noopener noreferrer"}
-- Installation location:  **`~/.config/nvim-Webdev`**
+- Installation location:  **`~/.config/lazyman/Webdev`**
 
 
 ### Git repository
