--- a/_posts/2023-08-12-Traap.md
+++ b/_posts/2023-08-12-Traap.md
@@ -15,7 +15,7 @@ img_path: "/posts/20230812"
 - Configuration category: [Personal](https://lazyman.dev/configurations/#personal-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io){:target="_blank"}{:rel="noopener noreferrer"}
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim){:target="_blank"}{:rel="noopener noreferrer"}
-- Installation location:  **`~/.config/nvim-Traap`**
+- Installation location:  **`~/.config/lazyman/Traap`**
 
 
 ### Git repository
