Revert to v3 configuration locations, add target to external links

--- a/_posts/2023-08-13-Penguin.md
+++ b/_posts/2023-08-13-Penguin.md
@@ -15,7 +15,7 @@ Aims to provide a base configuration with beautiful UI and fast startup time
 - Configuration category: [Base](https://lazyman.dev/configurations/#base-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io){:target="_blank"}{:rel="noopener noreferrer"}
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim){:target="_blank"}{:rel="noopener noreferrer"}
-- Installation location:  **`~/.config/lazyman/Penguin`**
+- Installation location:  **`~/.config/nvim-Penguin`**
 
 
 ### Git repository
