--- a/_posts/2023-08-20-LazyVim.md
+++ b/_posts/2023-08-20-LazyVim.md
@@ -9,13 +9,13 @@ img_path: "/posts/20230820"
 
 ## LazyVim Neovim Configuration Information
 
-The [LazyVim starter](https://github.com/LazyVim/starter) configuration
+The [LazyVim starter](https://github.com/LazyVim/starter){:target="\_blank"}{:rel="noopener noreferrer"} configuration
 
 - Install and initialize: **`lazyman -l`**
 - Configuration category: [Base](https://lazyman.dev/configurations/#base-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io){:target="_blank"}{:rel="noopener noreferrer"}
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim){:target="_blank"}{:rel="noopener noreferrer"}
-- Installation location:  **`~/.config/lazyman/LazyVim`**
+- Installation location:  **`~/.config/nvim-LazyVim`**
 
 
 ### Git repository
